# temporizador

./: Cargo.toml
src/: core.rs  main.rs  timer.rs  window.ui
