[package]
name = "temporizador"
version = "0.2.0"
authors = ["Márcio <marciosr10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"
[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4"

